--- a/panel/css/menu.css
+++ b/panel/css/menu.css
@@ -1,8 +1,43 @@
 .menu{
-    display: inline;
-    width: 320px;
+    display: inline-block;
+    width: 360px;
     height: 100vh;
     background: #fff;
+}
+
+.menuLogo{
+    width: calc(100% - 20px);
+    margin: 10px 10px 0 10px;
+}
+
+.menuLogoContainer{
+    display: flex;
+    align-items: center;
+    padding: 15px 10px;
+    border-radius: 10px;
+    background: #2C374D;
+    transition: .2s;
+}
+
+.menuLogoImg{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #fff;
+}
+
+.menuLogoText{
+    padding-left: 15px;
+}
+
+.menuLogoText h2{
+    color: #fff;
+    font-size: 18px;
+}
+
+.menuLogoText a{
+    color: #fff;
+    font-size: 14px;
 }
 
 .menu li{
@@ -11,15 +46,15 @@
 
 .menu li a{
     display: flex;
-    padding: 15px 10px;
+    padding: 18px 10px;
     background: #fafafa;
     color: #333;
-    border-radius: 5px;
-    margin: 10px 10px;
-    transition: .4s;
+    border-radius: 10px;
+    margin: 8px 10px;
+    transition: .2s;
 }
 
 .menu li a:hover{
-    background: #096bff;
+    background: #2C374D;
     color: #fff;
 }
