--- a/panel/css/normalize.css
+++ b/panel/css/normalize.css
@@ -107,4 +107,4 @@ label {
 ::-webkit-scrollbar { width: 5px; height: 5px;}
 ::-webkit-scrollbar-track {  background: none;}
 ::-webkit-scrollbar-track-piece { background: none;}
-::-webkit-scrollbar-thumb { background: #0940bb; border-radius: 0px;}
+::-webkit-scrollbar-thumb { background: #2C374D; border-radius: 0px;}
