--- a/panel/css/staff.css
+++ b/panel/css/staff.css
@@ -63,3 +63,69 @@
     background: none;
     color: #2C374D;
 }
+
+
+/* staff */
+
+.staffContainer{
+    display: flex;
+    justify-content: space-between;
+}
+
+.staff{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 320px;
+    margin: 35px 0 0 0;
+}
+
+.staffPhoto{
+    display: flex;
+    justify-content: center;
+    width: 160px;
+    height: 160px;
+    border-radius: 10px;
+    background: #f2f2f2;
+}
+
+.staffInformation{
+    text-align: center;
+    width: 100%;
+}
+
+.staffInformation h2{
+    color: #2C374D;
+    font-size: 18px;
+    margin-top: 15px;
+}
+
+.staffInformation p{
+    display: flex;
+    justify-content: center;
+    color: #666;
+    font-size: 14px;
+    width: 100%;
+}
+
+.staffAction{
+    text-align: center;
+    width: 100%;
+    margin: 10px 0 0 0;
+}
+
+.staffActionEdit{
+    display: inline-block;
+    padding: 14px 28px;
+    border-radius: 10px;
+    color: #fff;
+    background: #2C374D;
+}
+
+.staffActionDelete{
+    color: red;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 5px 0 0 0;
+}
