--- a/css/index.css
+++ b/css/index.css
@@ -178,6 +178,57 @@
     margin: 25px 0 0 0;
 }
 
+/* staff */
+
+.staff{
+    margin: 45px 0 0 0;
+}
+
+.staffContainer{
+    display: flex;
+    justify-content: space-between;
+    margin: 25px 0 0 0;
+}
+
+.staffBlock{
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.staffImg{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.staffImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: .4s;
+}
+
+
+.staffName{
+    text-align: center;
+    width: 100%;
+}
+
+.staffName h2{
+    font-size: 18px;
+    margin: 5px 0 0 0;
+    color: #333;
+    font-weight: 500;
+}
+
+.staffBlock:hover .staffImg img{
+    transform: scale(1.1);
+}
+
+
 @media(min-width: 320px) and (max-width: 850px){
     .titleSection h2{
         font-size: 26px;
@@ -229,7 +280,7 @@
         width: calc(100% - 40px);
         justify-content: center;
         flex-wrap: wrap;
-        padding: 0 20px;
+        padding: 20px;
     }
     
     .advantagesBlock{
@@ -298,8 +349,31 @@
         font-size: 14px;
     }
 
+    /* staff */
 
+    .staffContainer{
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 
+    .staffBlock{
+        width: 150px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 35px 0 0 0;
+    }
+
+    .staffImg{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        overflow: hidden;
+    }
+
+    .staffName h2{
+        font-size: 14px;
+    }
 }
 
 
