--- a/panel/css/review.css
+++ b/panel/css/review.css
@@ -1,4 +1,3 @@
-
 .reviewContent{
     width: 100%;
 }
@@ -13,7 +12,7 @@
 }
 
 .reviewProductImg{
-    width: 100px;
+    width: 200px;
     border-radius: 10px;
     overflow: hidden;
     margin: 20px;
@@ -21,14 +20,14 @@
 
 
 .reviewProductImg img{
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
 }
 
 .reviewBlockContent{
     padding: 20px 10px;
-    width: calc(100% - 130px);
+    width: calc(100% - 260px);
 }
 
 .reviewBlockContent h3{
@@ -43,7 +42,6 @@
     background: #f2f2f2;
     border-radius: 10px;
     padding: 20px;
-    margin: 20px 0 0 0;
 }
 
 .responseBlock h2{
@@ -68,7 +66,7 @@
 }
 
 .responseForm textarea{
-    border-radius: 10px;
+    border-radius: 20px;
     width: 100%;
     padding: 20px;
     height: 80px;
@@ -88,7 +86,7 @@
     margin-right: 10px;
 }
 
-.cancel{
+.submitDel{
     color: red;
 }
 
