--- a/css/ajax-content.css
+++ b/css/ajax-content.css
@@ -2,16 +2,16 @@
 
 .hystmodalBlock{
     right: 0;
-    width: 600px;
+    width: 500px;
     height: 90vh;
     background: #fff;
     overflow-y: scroll;
     border-radius: 10px;
+    position: relative;
 }
 
-
 #content{
-    padding: 15px;
+    padding: 15px 15px 60px;
 }
 
 #content h2{
@@ -89,14 +89,14 @@
 
 }
 
+
 /* contentMonth */
 
 .contentMonth{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
     overflow-x: scroll;
-    width: 500px;
+    width: 100%;
     background: #fff;
     margin: 10px 0 0 0;
     height: auto;
@@ -144,9 +144,9 @@
 }
 
 .containerBlock{
-    width: 500px;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     margin: 20px 0 0 0;
 }
@@ -169,6 +169,9 @@
 
 }
 
+.booked{
+    background: #ddd;
+}
 
 .noBlockDateTime{
     width: 100%;
@@ -182,4 +185,41 @@
 
 .noBlockDateTime p{
     color: #424D6B;
+}
+
+.btnModalBack{
+    position: fixed;
+    width: 500px;
+    background: #77AD9D;
+    color: #fff;
+    border-radius: 0 0 10px 10px;
+    text-align: center;
+    padding: 14px 0;
+    bottom: 5%;
+}
+
+@media(min-width: 320px) and (max-width: 650px){
+
+    .hystmodalBlock{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+    }
+
+    #content{
+        width: 100vw;
+        padding: 0 0 220px 0;
+    }
+    
+    .timeBtn{
+        width: 40%;
+    }
+    .btnModalBack{
+        width: 100%;
+        bottom: 0;
+        border-radius: 0;
+    }
+    
+
 }
