--- a/panel/css/menu.css
+++ b/panel/css/menu.css
@@ -34,6 +34,13 @@
     height: 60px;
     border-radius: 50%;
     background: #fff;
+    overflow: hidden;
+}
+
+.menuLogoImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .menuLogoText{
