--- a/css/basket.css
+++ b/css/basket.css
@@ -126,3 +126,102 @@
 .basketBtn:hover{
     background: #4eaa8f;
 }
+
+@media(min-width: 320px) and (max-width: 920px){
+    
+
+    .basket{
+        display: flex;
+        justify-content: center;
+    }
+    
+    .basketContainer{
+        flex-wrap: wrap-reverse;
+        margin: 80px 0 0 0;
+    }
+    
+    .basketContent{
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .basketProductBlock{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        background: #fafafa;
+        border-radius: 10px;
+        padding: 20px;
+        margin-bottom: 20px;
+    }
+    
+    .productBlockInfo{
+        display: flex;
+        align-items: center;
+    }
+    
+    .productBlockImg{
+        border-radius: 10px;
+        overflow: hidden;
+        width: 80px;
+        height: 80px;
+    }
+    
+    .productBlockImg img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    .productBlockText{
+        width: calc(100% - 80px);
+        padding-left: 10px;
+    }
+    
+    .productBlockText h2{
+        color: #424D6B;
+        font-size: 14px;
+    }
+    
+    .productBlockText p{
+        font-size: 12px;
+        color: #999;
+        margin: 3px 0 0 0;
+    }
+    
+    .productBlockText h3{
+        font-size: 16px;
+        margin: 3px 0 0 0;
+        color: #424D6B;
+    }
+    
+    .countLabel{
+        display: flex;
+        align-items: center;
+    }
+    
+    .countLabel input{
+        margin: 5px 0 0 10px;
+        color: #999;
+        font-size: 14px;
+        padding: 0;
+    }
+
+    .productBlockAction{
+        width: 100%;
+    }
+
+    .productBlockAction a{
+        font-size: 12px;
+    }
+    
+    
+    /* basketInfoContent */
+    
+    .basketInfoContent{
+        width: 100%;
+    }
+  
+    
+}
